package com.lld.order.good.repository;

import com.lld.order.good.model.Order;

public interface OrderRepository {

    void save(Order order);

}
